--- a/yakuzaPowergym.css
+++ b/yakuzaPowergym.css
@@ -290,8 +290,8 @@ opacity: 100%;
 
 #aboutyakuza{
      background-image: url(yakuzapexels7.jpg);
-     background-color: rgb(1,71,45);
-     background-blend-mode: multiply
+     background-color: black;
+     background-blend-mode:color-dodge;
 }
 #goalyakuza{
 background-size: 100%;
