--- a/yakuzaPowergym.css
+++ b/yakuzaPowergym.css
@@ -16,125 +16,211 @@ opacity: 50%;
 #Y{
      font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
      font-weight: bolder;
-     text-overflow: ellipsis;
-text-decoration-color: #ff6600;  
- text-shadow: 4cm;
+ text-shadow: 1cm;
      color: rgb(1, 71, 45);
-     
      font-weight: bolder;
-     font-family: 'Times New Roman', Times, serif;
-     
      text-align: center;
-     text-decoration: solid;
-     background-color: rgba(15, 1, 1, 0);
-     margin-left: 11cm;
-     margin-right: 11cm;
+}
+
+.Y{
+background-color:white;
+margin-top: 1px;
+padding-top:1px;
+padding-bottom: 1px;
+margin-right: 11cm;
+margin-left: 11cm;
+box-shadow:inset 0 0 20px 20px;
+
 }
 
 .H{
 
 
-transform: translateZ(3cm);
-     
+
      font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-     font-weight: bolder;
+         font-weight: bolder;
 text-decoration: underline;
      text-shadow: 4cm;
      text-emphasis-color: black;
      color: rgba(238, 62, 9, 0.801);
-     background-color: rgb(18, 19, 18);
-margin-right: 34cm;
+     background-color: rgba(18, 19, 18,.0);
+text-align: center;
 
 
 
 
 }
 
-#I{
-     
-     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-     font-weight: bolder;
-     text-shadow: 4cm;
-     text-emphasis-color: black;
-     color: rgba(250, 6, 6, 0.801);
-     background-color: rgb(7, 7, 7);
-margin-right: 31cm;
 
-}
 
-#workout{
+.workout{
 
-transform: translateZ(4cm);
-     background-color: rgba(0, 0, 0,0.4);
-     color:rgba(255, 255, 255,0.5);
-text-decoration:none;
+
+     background-color:rgba(0, 0, 0,0.4);
+     color:rgba(255, 255, 255,1);
+text-decoration: solid;
 font-weight: 800;
-text-align: justify;
-text-shadow: 5cm;
-
+width: 10cm;
+height: 12cm;
+padding-top: 1cm;
+padding-left: 0.5cm;
+padding-right: 0.5cm;
+padding-bottom: 0.5cm;
+margin: 0 auto;
+text-align: center;
+box-shadow: 0 0 30px 3px rgba(63, 248, 109,0.5);
+border-radius: 2cm;
+border-style: solid;
+border-color:black;
+letter-spacing: 5px;
 
 
 
 }
-     
+.body{
+background-color: black;
+     background-size: 100%;
+     background-repeat: no-repeat;
+          background-image: url(yakuzagoal.jpg);
+          opacity: inherit;
+          background-blend-mode: lighten;
+text-align: center;
+
+}
 
 
-#G{
      
+.wrapperG{
+     box-sizing: border-box;
+     
+     
+     }
+
+
+
+.GOALS h1{
      font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-     font-weight: bolder;
+         font-weight: bolder;
 text-decoration: underline;
      text-shadow: 4cm;
      text-emphasis-color: black;
      color: rgba(238, 62, 9, 0.801);
-     background-color: rgb(18, 19, 18);
-margin-right: 34cm;
+     background-color: rgba(18, 19, 18,.0);
+text-align: center;
 }
-#A{
+
+
+.GOALS p{
+     box-shadow: 0 0 30px 3px;
+
+     letter-spacing: 5px; 
+     box-sizing: border-box;
      
-     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-     font-weight: bolder;
-     text-shadow: 4cm;
-     text-emphasis-color: black;
-     color: rgba(238, 62, 9, 0.801);
-     background-color: black;
-margin-right: 33cm;
-
-}
-
-
-
-#goal{
      background-color: rgba(0, 0, 0,0.5);
-     color: rgba(240, 248, 255,0.5);
+     color: rgba(240, 248, 255,1);
 text-decoration: solid;
 font-weight: 800;
-text-align: justify;
+text-align:center;
 text-shadow: 5cm;
+padding: 1cm;
+width: 10cm;
+height: 8cm;
+margin:0 auto;
+
+border-radius: 2cm;
+border-style: solid;
+border-color:black;
 
 
 }
-#about{
+.wrapperA{
 
+     box-sizing: border-box;
+
+}
+
+.about h1{
      
-     background-color: rgba(14, 13, 13,0.5);
-     color: rgba(248, 245, 245,0.5);
-text-decoration: solid;
-font-weight: 800;
-text-align: justify;
-text-shadow: 5cm;
+     text-decoration: underline;
+     text-align: center;
+          font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+          font-weight: bolder;
+          text-shadow: 4cm;
+          text-emphasis-color: black;
+          color: rgba(250, 6, 6, 0.801);
+          
+     
 
 
-margin: 4px;
-padding: 3px;
 }
-#inspiration{
-     background-color:rgba(0, 0, 0,0.5);
-     color:rgba(255, 255, 255,0.5);
+
+
+
+.about p{
+
+     background-color:rgba(0, 0, 0,0.7);
+     color:rgba(255, 255, 255,1);
 text-decoration: solid;
 font-weight: 800;
-text-align: justify;
-text-shadow: 5cm;
+width: 10cm;
+height: 10cm;
+padding-top: 1cm;
+padding-left: 0.5cm;
+padding-right: 0.5cm;
+padding-bottom: 0.5cm;
+margin: 0 auto;
+text-align: center;
+box-shadow: 0 0 30px 3px;
+border-radius: 2cm;
+border-style: solid;
+border-color:black;
+letter-spacing: 5px;
+
+}
+.wrapperI{
+box-sizing: border-box;
+
+}
+
+.inspiration h1{
+
+
+     text-decoration: underline;
+     text-align: center;
+          font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+          font-weight: bolder;
+          text-shadow: 4cm;
+          text-emphasis-color: black;
+          color: rgba(250, 6, 6, 0.801);
+          
+     
+
+
+
+}
+
+
+
+.inspiration p{
+     background-color:rgba(0, 0, 0,0.4);
+     color:rgba(255, 255, 255,1);
+text-decoration: solid;
+font-weight: 800;
+width: 10cm;
+height: 10cm;
+padding-top: 1cm;
+padding-left: 0.5cm;
+padding-right: 0.5cm;
+padding-bottom: 0.5cm;
+margin: 0 auto;
+text-align: center;
+box-shadow: 0 0 30px 3px;
+border-radius: 2cm;
+border-style: solid;
+border-color:black;
+letter-spacing: 5px;
+
+
 }
 #ceo{
      background-color: rgb(0, 0, 0);
@@ -147,6 +233,7 @@ text-decoration: underline;
 font-stretch: expanded;
 }
 .home{
+     width: 100%;
      padding-bottom: 12cm;
      background-image: url(yakuzahome.jpg);
           background-repeat: no-repeat;
@@ -162,24 +249,6 @@ opacity: 100%;
      
      
      
-}
-#form{
-     
-     transform-origin: right bottom 0px;
-transform: scale(0.75);     
-     font-weight: 900;
-     font-family: 'Times New Roman', Times, serif;
-      text-decoration: solid;
-     text-align: center;
-align-content: center;
-background-color: rgba(1, 71, 45,0.5);
-margin-right: 13cm;
-margin-left: 13cm;
-padding: 1cm;
-}
-
-#formcontent{
-     color: rgba(255, 255, 255, 0.911);
 }
 
 
@@ -225,13 +294,16 @@ animation-iteration-count: infinite;
 
 .wspace{
      cursor: text;
-background-color: black;
+background-color:black;
 color: white;
 
 
 }
 .wspace:hover{
-     transform: scale(1.5);
+     transform: scale(1.2);
+     border-radius: 1cm;
+
+box-shadow:inset 0 0 5px white;
 
 }
 #reset{
@@ -265,10 +337,10 @@ color: white;
      
 
      padding-bottom: 12cm;
-     background-image: url(yakuzahome.jpg);
+     background-image: url(yakuzapexels9.jpg);
           background-repeat: no-repeat;
      background-size: cover;
-      background-color: rgb(7, 211, 68);
+      background-color: rgba(255, 228, 196,0.5);
       background-blend-mode: difference;
 background-blend-mode: multiply;
 opacity: 100%;
@@ -279,21 +351,13 @@ opacity: 100%;
 #aboutyakuza{
    background-image: url(yakuzapexels7.jpg);
 background-color: rgb(1, 71,45);
-     background-blend-mode: multiply;
+     background-blend-mode: lighten;
 }
-#goalyakuza{
-background-size: 100%;
-background-repeat: no-repeat;
-     background-image: url(yakuzagoal.jpg);
-     background-color: rgb(1,71 , 45);
-     background-blend-mode: multiply;
 
-
-}
 #inspirationyakuza{
 background-size: 50%;
      background-image: url(yakuzapexels10.jpg);
-     background-color: rgb(1, 71, 45);
+     background-color: beige;
      background-blend-mode: multiply;
 }
 #link1{
@@ -345,16 +409,19 @@ font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubun
      transition-duration: 0s;
      transition-timing-function: ease-in;
      transition-delay: 0s;
+     margin: 0 auto;
      width: 0.8cm;
      height: 0.6cm;
-     background-color: white;
-     text-align: center;
-     vertical-align: middle;
+     padding: 5px;
+     background-color: rgba(255, 255, 255,0.5);
+     position: relative;
+     margin-top: 0.5cm;
+
      
 }
 .back:hover{
  transform: scale(1.3);
-    
+    box-shadow: 0 0 30px black;
      background-color: rgba(238, 62, 9, 0.801);
  color: white;    
 
@@ -384,7 +451,7 @@ nav{
      background-color: rgba(1, 71,45,0);
      list-style-type: none;
      text-align: center;
-
+transform: translateX(-1cm);
 }
  nav ul li{
 
@@ -409,11 +476,12 @@ text-decoration: none;
 
 
  nav ul li:hover{
-background-color:rgb(0, 0, 0);
+background-color:rgb(255, 255, 255,.2);
 border-radius: 1cm;
 border-color: black;
 text-decoration: underline;
 color: rgb(1,71 , 45);
+box-shadow: inset 0 0 5px white;
 }
 nav ul li:visited{
      background-color:black;
