--- a/yakuzaPowergym.css
+++ b/yakuzaPowergym.css
@@ -69,7 +69,7 @@ color:#06f170;
 box-sizing: border-box;
 font-family: Verdana, Geneva, Tahoma, sans-serif;
 font-weight: lighter;
-text-decoration: underline;
+
 font-size: 13px;
 
 
@@ -89,7 +89,7 @@ box-shadow: 0 0 15px white;
 background-color: rgba(1, 71,45,.4);
 margin: 0 auto;
 width:10cm;
-height:5cm;
+height:7cm;
 margin-top: 5cm;
 text-align: center;
 letter-spacing: 1px;
@@ -169,8 +169,8 @@ text-align: center;
      color:rgba(255, 255, 255,1);
 text-decoration: solid;
 font-weight: 800;
-width: 10cm;
-height: 12cm;
+width: 12cm;
+height: 14cm;
 padding-top: 1cm;
 padding-left: 0.5cm;
 padding-right: 0.5cm;
@@ -181,7 +181,7 @@ box-shadow: 0 0 30px 3px rgba(63, 248, 109,0.5);
 border-radius: 2cm;
 border-style: solid;
 border-color:black;
-letter-spacing: 5px;
+letter-spacing: 3px;
 
 
 
@@ -389,6 +389,18 @@ animation-name: animateregistration;
 animation-duration: 10s;
 animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
 animation-iteration-count: infinite;
+
+
+}
+
+.loginprompt{
+color: rgba(255, 0, 0,0.5);
+
+font-family: sans-serif;
+font-weight: bold;
+letter-spacing: 2px;
+
+outline: none;
 
 
 }
@@ -637,7 +649,7 @@ border: 1px;
 border-style: solid;
 border-color:aqua;
 outline: none;
-
+text-decoration:none ;
 
 }
 input :out-of-range{
@@ -645,6 +657,7 @@ input :out-of-range{
      border-style: solid;
      border-color: red;
      outline:none;
+     text-decoration: none;
 }
 
 
